--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>com.thousandmemories.photon</groupId>
             <artifactId>photon-core</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.dropwizard</groupId>
